test/types/type_variables/ferguson/notGenericQ-var.good
notGenericQ-var.chpl:4: error: the variable x is marked generic with (?) but the type 'R' is not generic
